# Ratatoskr-v4

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile.backend  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/auth/: dependencies.py  errors.py  models.py  password.py  repository.py  router.py  schemas.py  seed.py  service.py  tokens.py
backend/app/backtesting/: cli.py  metrics.py  models.py  python_runner.py  repository.py  router.py  runner.py  schemas.py  sizing.py  state.py
backend/app/common/: base_model.py  config.py  database.py  errors.py  middleware.py  rate_limiter.py  schemas.py  utils.py
backend/app/market_data/: config.py  errors.py  models.py  repository.py  router.py  schemas.py  service.py  startup.py
backend/app/observability/: config.py  errors.py  models.py  router.py  schemas.py  service.py  startup.py
backend/app/paper_trading/: cash_manager.py  config.py  consumer.py  errors.py  models.py  reconciliation.py  repository.py  router.py  schemas.py  service.py  startup.py
backend/app/portfolio/: config.py  daily_jobs.py  dividends.py  errors.py  fill_processor.py  mark_to_market.py  metrics.py  models.py  options_lifecycle.py  pnl.py  repository.py  router.py  schemas.py  service.py  snapshots.py  splits.py  startup.py
backend/app/risk/: config.py  errors.py  evaluator.py  models.py  repository.py  router.py  schemas.py  service.py  startup.py
backend/migrations/: env.py
backend/tests/: conftest.py
(+515 files in other folders)
